@@ -35,25 +35,24 @@ import com.sun.jdo.spi.persistence.utility.JavaTypeHelper;
 import java.beans.PropertyVetoException;
 import java.util.ArrayList;
 import java.util.Iterator;
-import java.util.ListIterator;
+import java.util.List;
 
 import org.glassfish.persistence.common.I18NHelper;
 import org.netbeans.modules.dbschema.DBMemberElement;
 import org.netbeans.modules.dbschema.util.NameUtil;
 
 /**
- *
  * @author Mark Munro
  * @author Rochelle Raccah
  * @version %I%
  */
-public class MappingFieldElementImpl extends MappingMemberElementImpl
-    implements MappingFieldElement
-{
-    private ArrayList _columns;    // array of member names (columns or pairs)
+public class MappingFieldElementImpl extends MappingMemberElementImpl implements MappingFieldElement {
+    // array of member names (columns or pairs)
+    private List<String> _columns;
 
-    //@olsen: made transient to prevent from serializing into mapping files
-    private transient ArrayList _columnObjects; // array of DBMemberElement (for runtime)
+    // transient to prevent from serializing into mapping files
+    // array of DBMemberElement (for runtime)
+    private transient List<? extends DBMemberElement> _columnObjects;
 
     private int _fetchGroup;
     private int _properties;
@@ -81,60 +80,52 @@ public class MappingFieldElementImpl extends MappingMemberElementImpl
      * declaring class.  This constructor should only be used for cloning and
      * archiving.
      */
-    public MappingFieldElementImpl ()
-    {
+    public MappingFieldElementImpl() {
         this(null, null);
     }
 
-    /** Create new MappingFieldElementImpl with the corresponding name and
+
+    /**
+     * Create new MappingFieldElementImpl with the corresponding name and
      * declaring class.
+     *
      * @param name the name of the element
      * @param declaringClass the class to attach to
      */
-    public MappingFieldElementImpl (String name,
-        MappingClassElement declaringClass)
-    {
+    public MappingFieldElementImpl(String name, MappingClassElement declaringClass) {
         super(name, declaringClass);
         setFetchGroupInternal(GROUP_DEFAULT);
     }
 
-// TBD?
-/*    public boolean mapped ()
-    {
-        ArrayList columns = getColumns();
-
-        return ((columns != null) && (columns.size() > 0));
+    /**
+     * Determines whether this field element is read only or not.
+     *
+     * @return <code>true</code> if the field is read only,
+     *         <code>false</code> otherwise
+     */
+    @Override
+    public boolean isReadOnly() {
+        return getProperty(READ_ONLY);
     }
 
-    public void clear () { _columns = null; }*/
-// end TBD
 
-    //=================== properties exposed in interface ==================
-
-    /** Determines whether this field element is read only or not.
-     * @return <code>true</code> if the field is read only,
-     * <code>false</code> otherwise
-     */
-    public boolean isReadOnly () { return getProperty(READ_ONLY); }
-
-    /** Set whether this field element is read only or not.
+    /**
+     * Set whether this field element is read only or not.
+     *
      * @param flag - if <code>true</code>, the field element is marked as
-     * read only; otherwise, it is not
+     *            read only; otherwise, it is not
      * @exception ModelException if impossible
      */
-    public void setReadOnly (boolean flag) throws ModelException
-    {
+    @Override
+    public void setReadOnly(boolean flag) throws ModelException {
         Boolean old = JavaTypeHelper.valueOf(isReadOnly());
         Boolean newFlag = JavaTypeHelper.valueOf(flag);
 
-        try
-        {
+        try {
             fireVetoableChange(PROP_READ_ONLY, old, newFlag);
             setProperty(flag, READ_ONLY);
             firePropertyChange(PROP_READ_ONLY, old, newFlag);
-        }
-        catch (PropertyVetoException e)
-        {
+        } catch (PropertyVetoException e) {
             throw new ModelVetoException(e);
         }
     }
@@ -143,8 +134,8 @@ public class MappingFieldElementImpl extends MappingMemberElementImpl
      * @return <code>true</code> if the field is in a concurrency check,
      * <code>false</code> otherwise
      */
-    public boolean isInConcurrencyCheck ()
-    {
+    @Override
+    public boolean isInConcurrencyCheck() {
         return getProperty(IN_CONCURRENCY_CHECK);
     }
 
@@ -153,59 +144,67 @@ public class MappingFieldElementImpl extends MappingMemberElementImpl
      * being in a concurrency check; otherwise, it is not
      * @exception ModelException if impossible
      */
-    public void setInConcurrencyCheck (boolean flag) throws ModelException
-    {
+    @Override
+    public void setInConcurrencyCheck(boolean flag) throws ModelException {
         Boolean old = JavaTypeHelper.valueOf(isInConcurrencyCheck());
         Boolean newFlag = JavaTypeHelper.valueOf(flag);
 
-        try
-        {
+        try {
             fireVetoableChange(PROP_IN_CONCURRENCY_CHECK, old, newFlag);
             setProperty(flag, IN_CONCURRENCY_CHECK);
             firePropertyChange(PROP_IN_CONCURRENCY_CHECK, old, newFlag);
-        }
-        catch (PropertyVetoException e)
-        {
+        } catch (PropertyVetoException e) {
             throw new ModelVetoException(e);
         }
     }
 
-    /** Determines whether this field element is a version field or not.
-     * @return <code>true</code> if the field is a version field,
-     * <code>false</code> otherwise
-     */
-    public boolean isVersion () { return _isVersion; }
 
-    /** Set whether this field element is a version field or not.
+    /**
+     * Determines whether this field element is a version field or not.
+     *
+     * @return <code>true</code> if the field is a version field,
+     *         <code>false</code> otherwise
+     */
+    @Override
+    public boolean isVersion() {
+        return _isVersion;
+    }
+
+
+    /**
+     * Set whether this field element is a version field or not.
+     *
      * @param flag - if <code>true</code>, the field element is marked
-     * as a version field; otherwise, it is not
+     *            as a version field; otherwise, it is not
      * @exception ModelException if impossible
      */
-    public void setVersion (boolean flag) throws ModelException
-    {
+    @Override
+    public void setVersion(boolean flag) throws ModelException {
         Boolean old = JavaTypeHelper.valueOf(isVersion());
         Boolean newFlag = JavaTypeHelper.valueOf(flag);
 
-        try
-        {
+        try {
             fireVetoableChange(PROP_VERSION_FIELD, old, newFlag);
             _isVersion = flag;
             firePropertyChange(PROP_VERSION_FIELD, old, newFlag);
-        }
-        catch (PropertyVetoException e)
-        {
+        } catch (PropertyVetoException e) {
             throw new ModelVetoException(e);
         }
     }
 
-    //======================= fetch group handling ======================
+    // ======================= fetch group handling ======================
+
 
     /** Get the fetch group of this field element.
      * @return the fetch group, one of {@link #GROUP_DEFAULT},
      * {@link #GROUP_NONE}, or anything less than or equal to
      * {@link #GROUP_INDEPENDENT}
      */
-    public int getFetchGroup () { return _fetchGroup; }
+    @Override
+    public int getFetchGroup() {
+        return _fetchGroup;
+    }
+
 
     /** Set the fetch group of this field element.
      * @param group - an integer indicating the fetch group, one of:
@@ -213,19 +212,16 @@ public class MappingFieldElementImpl extends MappingMemberElementImpl
      * equal to {@link #GROUP_INDEPENDENT}
      * @exception ModelException if impossible
      */
-    public void setFetchGroup (int group) throws ModelException
-    {
-        Integer old = new Integer(getFetchGroup());
-        Integer newGroup = new Integer(group);
+    @Override
+    public void setFetchGroup(int group) throws ModelException {
+        Integer old = Integer.valueOf(getFetchGroup());
+        Integer newGroup = Integer.valueOf(group);
 
-        try
-        {
+        try {
             fireVetoableChange(PROP_FETCH_GROUP, old, newGroup);
             setFetchGroupInternal(group);
             firePropertyChange(PROP_FETCH_GROUP, old, newGroup);
-        }
-        catch (PropertyVetoException e)
-        {
+        } catch (PropertyVetoException e) {
             throw new ModelVetoException(e);
         }
     }
@@ -237,62 +233,55 @@ public class MappingFieldElementImpl extends MappingMemberElementImpl
      * {@link #GROUP_DEFAULT}, {@link #GROUP_NONE}, or anything less than or
      * equal to {@link #GROUP_INDEPENDENT}
      */
-    protected void setFetchGroupInternal (int group)
-    {
+    protected void setFetchGroupInternal(int group) {
         _fetchGroup = group;
     }
 
-    //========================== column handling ==========================
+    // ========================== column handling ==========================
 
-    /** Returns the list of column names to which this mapping field is
+
+    /**
+     * Returns the list of column names to which this mapping field is
      * mapped.
+     *
      * @return the names of the columns mapped by this mapping field
      */
-    public ArrayList getColumns ()
-    {
-        if (_columns == null)
-            _columns = new ArrayList();
+    @Override
+    public List<String> getColumns() {
+        if (_columns == null) {
+            _columns = new ArrayList<>();
+        }
 
         return _columns;
     }
+
 
     /** Adds a column to the list of columns mapped by this mapping field.
      * @param column column element to be added to the mapping
      * @exception ModelException if impossible
      */
-    public void addColumn (DBMemberElement column) throws ModelException
-    {
-        if (column != null)
-        {
-            ArrayList columns = getColumns();
-            String columnName = NameUtil.getRelativeMemberName(
-                column.getName().getFullName());
+    @Override
+    public void addColumn(DBMemberElement column) throws ModelException {
+        if (column != null) {
+            List<String> columns = getColumns();
+            String columnName = NameUtil.getRelativeMemberName(column.getName().getFullName());
 
-            if (!columns.contains(columnName))
-            {
-                try
-                {
+            if (!columns.contains(columnName)) {
+                try {
                     fireVetoableChange(PROP_COLUMNS, null, null);
                     columns.add(columnName);
                     firePropertyChange(PROP_COLUMNS, null, null);
 
                     // sync up runtime's object list too
                     _columnObjects = null;
-                }
-                catch (PropertyVetoException e)
-                {
+                } catch (PropertyVetoException e) {
                     throw new ModelVetoException(e);
                 }
-            }
-            else
-            {
+            } else {
                 // this part was blank -- do we want an error or skip here?
             }
-        }
-        else
-        {
-            throw new ModelException(I18NHelper.getMessage(getMessages(),
-                "mapping.element.null_argument"));                // NOI18N
+        } else {
+            throw new ModelException(I18NHelper.getMessage(getMessages(), "mapping.element.null_argument"));
         }
     }
 
@@ -303,45 +292,38 @@ public class MappingFieldElementImpl extends MappingMemberElementImpl
      * the mapping
      * @exception ModelException if impossible
      */
-    public void removeColumn (String columnName) throws ModelException
-    {
-        if (columnName != null)
-        {
-            try
-            {
+    @Override
+    public void removeColumn(String columnName) throws ModelException {
+        if (columnName != null) {
+            try {
                 fireVetoableChange(PROP_COLUMNS, null, null);
 
-                if (!getColumns().remove(columnName))
-                {
+                if (!getColumns().remove(columnName)) {
                     throw new ModelException(
-                        I18NHelper.getMessage(getMessages(),
-                        "mapping.element.element_not_removed",         // NOI18N
-                        columnName));
+                        I18NHelper.getMessage(getMessages(), "mapping.element.element_not_removed", columnName));
                 }
 
                 firePropertyChange(PROP_COLUMNS, null, null);
 
                 // sync up runtime's object list too
                 _columnObjects = null;
-            }
-            catch (PropertyVetoException e)
-            {
+            } catch (PropertyVetoException e) {
                 throw new ModelVetoException(e);
             }
         }
     }
 
-    protected boolean isMappedToTable (MappingTableElement table)
-    {
+    @Override
+    public boolean isMappedToTable(MappingTableElement table) {
         String tableName = table.getName();
-        Iterator iterator = getColumns().iterator();
+        Iterator<String> iterator = getColumns().iterator();
 
-        while (iterator.hasNext())
-        {
+        while (iterator.hasNext()) {
             String columnName = iterator.next().toString();
 
-            if (NameUtil.getTableName(columnName).equals(tableName))
+            if (NameUtil.getTableName(columnName).equals(tableName)) {
                 return true;
+            }
         }
 
         return false;
@@ -353,134 +335,138 @@ public class MappingFieldElementImpl extends MappingMemberElementImpl
      * field is mapped.  This method should only be used by the runtime.
      * @return the columns mapped by this mapping field
      */
-    public ArrayList getColumnObjects ()
-    {
-        //@olsen: compute objects on access
-        if (_columnObjects == null)
-        {
-            //@olsen: calculate the column objects based on
-            //        the column names as stored in _columns
-            //_columnObjects = new ArrayList();
-            _columnObjects = MappingClassElementImpl.toColumnObjects(
-                getDeclaringClass().getDatabaseRoot(), getColumns());
+    @Override
+    public List<? extends DBMemberElement> getColumnObjects() {
+        // @olsen: compute objects on access
+        if (_columnObjects == null) {
+            // @olsen: calculate the column objects based on
+            // the column names as stored in _columns
+            // _columnObjects = new ArrayList();
+            String databaseRoot = getDeclaringClass().getDatabaseRoot();
+            _columnObjects = MappingClassElementImpl.toColumnObjects(databaseRoot, getColumns());
         }
 
         return _columnObjects;
     }
 
-    //============= delegation to PersistenceFieldElement ===========
-
-    final PersistenceFieldElement getPersistenceFieldElement ()
-    {
-        return ((MappingClassElementImpl)getDeclaringClass()).
-            getPersistenceElement().getField(getName());
+    final PersistenceFieldElement getPersistenceFieldElement() {
+        return ((MappingClassElementImpl) getDeclaringClass()).getPersistenceElement().getField(getName());
     }
 
-    /** Computes the field number of this field element.
+
+    /**
+     * Computes the field number of this field element.
+     *
      * @return the field number of this field
      */
-    public int getFieldNumber ()
-    {
+    public int getFieldNumber() {
         return getPersistenceFieldElement().getFieldNumber();
     }
 
-    /** Returns the array of concurrency groups to which this field belongs.
+
+    /**
+     * Returns the array of concurrency groups to which this field belongs.
+     *
      * @return the concurrency groups in which this field participates
      * @see PersistenceClassElement#getConcurrencyGroups
      */
-    public ConcurrencyGroupElement[] getConcurrencyGroups ()
-    {
+    public ConcurrencyGroupElement[] getConcurrencyGroups() {
         return getPersistenceFieldElement().getConcurrencyGroups();
     }
 
-    //================ convenience methods for properties bits ===============
-
-    private boolean getProperty (int propertyBit)
-    {
-        return ((getProperties() & propertyBit) > 0);
+    private boolean getProperty(int propertyBit) {
+        return (getProperties() & propertyBit) > 0;
     }
 
-    public void setProperty (boolean flag, int propertyBit)
-    {
-        _properties =
-            (flag) ? (_properties | propertyBit) : (_properties & ~propertyBit);
+
+    public void setProperty(boolean flag, int propertyBit) {
+        _properties = (flag) ? (_properties | propertyBit) : (_properties & ~propertyBit);
     }
 
-    //================= properties not available in interface ================
+    // ================= properties not available in interface ================
 
-    public int getProperties () { return _properties;}
 
-    public boolean getLogOnAccess () { return getProperty(LOG_ON_ACCESS); }
+    public int getProperties() {
+        return _properties;
+    }
 
-    public void setLogOnAccess (boolean flag)
-    {
+
+    public boolean getLogOnAccess() {
+        return getProperty(LOG_ON_ACCESS);
+    }
+
+
+    public void setLogOnAccess(boolean flag) {
         setProperty(flag, LOG_ON_ACCESS);
     }
 
-    public boolean getLogOnUpdate () { return getProperty(LOG_ON_UPDATE); }
 
-    public void setLogOnUpdate (boolean flag)
-    {
+    public boolean getLogOnUpdate() {
+        return getProperty(LOG_ON_UPDATE);
+    }
+
+
+    public void setLogOnUpdate(boolean flag) {
         setProperty(flag, LOG_ON_UPDATE);
     }
 
-    public boolean getObserveOnAccess ()
-    {
+
+    public boolean getObserveOnAccess() {
         return getProperty(OBSERVE_ON_ACCESS);
     }
 
-    public void setObserveOnAccess (boolean flag)
-    {
+
+    public void setObserveOnAccess(boolean flag) {
         setProperty(flag, OBSERVE_ON_ACCESS);
     }
 
-    public boolean getRecordOnUpdate ()
-    {
+
+    public boolean getRecordOnUpdate() {
         return getProperty(RECORD_ON_UPDATE);
     }
 
-    public void setRecordOnUpdate (boolean flag)
-    {
+
+    public void setRecordOnUpdate(boolean flag) {
         setProperty(flag, RECORD_ON_UPDATE);
     }
 
-    public boolean getModifyBeforeImageOnUpdate ()
-    {
+
+    public boolean getModifyBeforeImageOnUpdate() {
         return getProperty(MOD_BI_ON_UPDATE);
     }
 
-    public void setModifyBeforeImageOnUpdate (boolean flag)
-    {
+
+    public void setModifyBeforeImageOnUpdate(boolean flag) {
         setProperty(flag, MOD_BI_ON_UPDATE);
     }
 
-    public boolean getReferentialIntegrityUpdates ()
-    {
+
+    public boolean getReferentialIntegrityUpdates() {
         return getProperty(REF_INTEGRITY_UPDATES);
     }
 
-    public void setReferentialIntegrityUpdates (boolean flag)
-    {
+
+    public void setReferentialIntegrityUpdates(boolean flag) {
         setProperty(flag, REF_INTEGRITY_UPDATES);
     }
 
-    public boolean getSendBeforeImage ()
-    {
+
+    public boolean getSendBeforeImage() {
         return getProperty(SEND_BEFORE_IMAGE);
     }
-    public void setSendBeforeImage (boolean flag)
-    {
+
+
+    public void setSendBeforeImage(boolean flag) {
         setProperty(flag, SEND_BEFORE_IMAGE);
     }
 
-    public int getCloneDepth () { return (_properties & CLONE_MASK); }
 
-    public void setCloneDepth (int cloneDepth)
-    {
-        if (cloneDepth < CLONE_FIELD || cloneDepth > CLONE_DEEP)
-        {
-        }
+    public int getCloneDepth() {
+        return (_properties & CLONE_MASK);
+    }
 
+
+    public void setCloneDepth(int cloneDepth) {
         _properties = _properties & ~CLONE_MASK | cloneDepth;
     }
 
@@ -489,17 +475,15 @@ public class MappingFieldElementImpl extends MappingMemberElementImpl
     /** Boston to Pilsen conversion.
      * This method converts the absolute column names to relative names.
      */
-    protected void stripSchemaName ()
-    {
-        if (_columns != null)        // handle _columns
-        {
+    @Override
+    public void stripSchemaName() {
+        if (_columns != null) {
             // Use ListIterator here, because I want to replace the value
-            // stored in the ArrayList.  The ListIterator returned by
+            // stored in the ArrayList. The ListIterator returned by
             // ArrayList.listIterator() supports the set method.
-            ListIterator i = _columns.listIterator();
-
-            while (i.hasNext())
-                i.set(NameUtil.getRelativeMemberName((String)i.next()));
+            while (_columns.listIterator().hasNext()) {
+                _columns.listIterator().set(NameUtil.getRelativeMemberName(_columns.listIterator().next()));
+            }
         }
     }
 }
